--- a/src/app/components/conditions/conditions.component.scss
+++ b/src/app/components/conditions/conditions.component.scss
@@ -1,47 +1,26 @@
 .sh-conditions {
-    .conditions-list {
-        height: 100%;
-        margin-top: 40px;
-    }
-
-    .assignemnt {
+    .sh-conditions-content {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        
-        .condition-property {
-            display: flex;
-            align-items: center;
-            width: 100%;
-            height: 50px;
-            justify-content: flex-start;
-            
-            .title {
-                width: 220px;
-            }
-
-            .type-properties-container {
-                margin-left: 25px;
-                display: flex;
-                align-items: center;
-                width: 300px;
-            }
-
-            sh-dropdown {
-                width: 220px;
-            }
-        }
-
-        .sh-btn {
-            width: 150px;
-            height: 30px;
-            margin: 0;
-        }
+        overflow: hidden;
     }
+    .conditions-list {
+        height: 100%;
+        margin-top: 20px;
+        flex: 1;
+        display: flex;
+    }
+
+
 
     .table {
         display: flex;
         flex-direction: column;
+        width: 100%;
+
+        .table-content {
+            height: calc(100% - 75px);
+        }
 
         .row {
             display: flex;
@@ -56,7 +35,7 @@
             &.title-row {
                 font-weight: bold;
                 font-size: 18px;
-                padding: 10px 0 10px 0;
+                flex-basis: 45px;
 
                 &:hover {
                     background-color: transparent;
