--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
                 <fa name="chevron-left"></fa>
                 <span>Previous week</span>
             </button>
-            <button class="export" mat-raised-button (click)="onExport()" *ngIf="!isWaitingForExport">
+            <button class="export" mat-raised-button (click)="onExport()" *ngIf="!isWaitingForExport" [disabled]="true">
                 <fa name="file"></fa>
                 <span>Export</span>
             </button>
@@ -15,29 +15,31 @@
             </button>
         </div>
         <div class="schedule" viewContent>
-            <div class="row title-row">
+            <div class="row title-row scroll-header">
                 <div class="cell title">
                     Rooms
                 </div>
-                <div class="cell title" *ngFor="let day of this.days">
+                <div class="cell title" *ngFor="let day of this.days" [ngClass]="{'today' : this.weeklySchedule.days[day].isToday}">
                     <div class="date-string">{{this.weeklySchedule.days[day].dateString}}</div>
                     <span>{{day}}</span>
                     <div class="show-absent" (click)="onShowAbsent(day)">Absences</div>
                 </div>
             </div>
-            <div>
-               <div class="row" *ngFor="let room of this.rooms">
-                    <div class="cell title room-name">
-                        {{room.name}}
-                    </div>
-                    <div class="cell content" *ngFor="let day of this.days">
-                        <div class="assignment" *ngFor="let asgn of this.weeklySchedule.days[day].assignmentsByRoom.get(room.id)">
-                            <div class="assignment-text" (click)="profileClicked(asgn.profile)"
-                                 [matTooltip]="asgn.condition.importance + ' - ' + asgn.condition.profession.name"
-                                 matTooltipPosition="above">{{asgn.profile.name}}</div>
+            <div class="schedule-content scroll-content">
+                <div class="scroll-wrapper">
+                   <div class="row" *ngFor="let room of this.rooms">
+                        <div class="cell title room-name">
+                            {{room.name}}
                         </div>
-                    </div>
-               </div>
+                        <div class="cell content" *ngFor="let day of this.days" [ngClass]="{'today' : this.weeklySchedule.days[day].isToday}">
+                            <div class="assignment" *ngFor="let asgn of this.weeklySchedule.days[day].assignmentsByRoom.get(room.id)">
+                                <div class="assignment-text" (click)="profileClicked(asgn.profile)"
+                                     [matTooltip]="asgn.condition.importance + ' - ' + asgn.condition.profession.name"
+                                     matTooltipPosition="above">{{asgn.profile.name}}</div>
+                            </div>
+                        </div>
+                   </div>
+                </div>
             </div>
         </div>
     </sh-view>
