--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,5 @@
+@import "../../../theme";
+
 .sh-home {
   .actions {
     display: flex;
@@ -39,12 +41,15 @@
     display: flex;
     flex-direction: column;
 
+    .schedule-content {
+      height: calc(100% - 85px);
+    }
+
     .row {
       display: flex;
-      border-bottom: 2px solid lightgray;
 
       &.title-row {
-        height: 75px;
+        flex-basis: 75px;
       }
 
       .title {
@@ -57,6 +62,12 @@
 
       .cell {
         flex: 1;
+        border-bottom: 2px solid lightgray;
+
+        &.today {
+          background-color: lightgray;
+          border-bottom: 2px solid $theme-a-secondary;
+        }
 
         &.content {
           height: 90px;
