--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,14 +3,12 @@
 @import "../node_modules/font-awesome/css/font-awesome.css";
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-/* You can add global styles to this file, and also import other style files */
+html, body { height: 100vh }
 body {
-  height: 100vh;
-  margin:0;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    overflow: hidden;
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .sh-btn {
     text-align: center;
@@ -35,3 +33,37 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         border-radius: 50%;
     }
 }
+
+
+
+// Scrolling
+.scroll-header {
+    padding: 0px 5px; // scroll padding
+}
+
+.scroll-content {
+    overflow-y: scroll;
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
+
+    .scroll-wrapper {
+        padding-left: 5px;
+    }
+
+    &::-webkit-scrollbar {
+        width: 5px;
+        background-color: #F5F5F5;
+    }
+
+    &::-webkit-scrollbar-thumb
+    {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+        background-color: $theme-a-secondary;
+    }
+}
+
+.mat-dialog-container {
+    overflow: visible!important;
+}
+
