--- a/src/app/components/profiles/profiles.component.scss
+++ b/src/app/components/profiles/profiles.component.scss
@@ -7,11 +7,14 @@
         display: flex;
         flex-direction: column;
 
+        .table-content {
+            height: calc(100% - 190px);
+        }
+
         .row {
             display: flex;
             border-bottom: 2px solid lightgray;
             align-items: center;
-            padding-left: 10px;
 
             &:hover {
                 background-color: lightgray;
@@ -20,7 +23,6 @@
             &.title-row {
                 font-weight: bold;
                 font-size: 20px;
-                padding: 10px 0 10px 0;
 
                 &:hover {
                     background-color: transparent;
