--- a/src/app/components/view/view.component.scss
+++ b/src/app/components/view/view.component.scss
@@ -8,6 +8,7 @@
     margin: auto;
     align-items: center;
     justify-items: flex-start;
+    position:relative;
 
     .view-header{
         flex-basis: 150px;
@@ -19,6 +20,7 @@
         padding-left: 50px;
         padding-right: 50px;
         justify-content: space-between;
+        position: absolute;
 
         .title {
             color:$theme-primary;
@@ -38,6 +40,12 @@
         flex: 1;
         height: 100%;
         overflow: auto;
+        position: absolute;
+        top: 140px;
+        background-color: white;
+        box-shadow: 0px 0px 3px black;
+        border-radius: 3px;
+        padding: 10px;
 
         >div {
             height: 100%;
