--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,3 +1,4 @@
 <div class="sh-loading">
-  <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+  <div class="lds-ripple"><div></div><div></div><div></div><div></div></div>
+  <div class="loading-text">Loading, Please wait.</div>
 </div>
