--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -1,96 +1,64 @@
 @import '../../../theme.scss';
 
 .sh-loading {
-    position: absolute;
-        height: 100px;
-        text-align: center;
-        line-height: 150px;
-        width: 100px;
-        left: calc(50% - 50px);
-        background-color: $theme-primary;
+  position: absolute;
+  height: 100vh;
+  text-align: center;
+  line-height: 150px;
+  width: 100%;
+  background-color: #f5f5f5;
+  z-index: 1000;
+  opacity: 0.85;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .loading-text {
+    color: $theme-secondary;
+    font-size: 30px;
+    font-weight: bold;
+    height: 50px;
+    line-height: 50px;
+    margin-top: -15px;
+  }
 }
 
-.lds-roller {
-    display: inline-block;
-    position: relative;
-    width: 64px;
-    height: 64px;
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 256px;
+  height: 256px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid $theme-secondary;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+.lds-ripple div:nth-child(3) {
+  animation-delay: -1s;
+}
+.lds-ripple div:nth-child(4) {
+  animation-delay: -1.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 112px;
+    left: 112px;
+    width: 0;
+    height: 0;
+    opacity: 1;
   }
-  .lds-roller div {
-    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    transform-origin: 32px 32px;
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 232px;
+    height: 232px;
+    opacity: 0;
   }
-  .lds-roller div:after {
-    content: " ";
-    display: block;
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background: $theme-secondary;
-    margin: -3px 0 0 -3px;
-  }
-  .lds-roller div:nth-child(1) {
-    animation-delay: -0.036s;
-  }
-  .lds-roller div:nth-child(1):after {
-    top: 50px;
-    left: 50px;
-  }
-  .lds-roller div:nth-child(2) {
-    animation-delay: -0.072s;
-  }
-  .lds-roller div:nth-child(2):after {
-    top: 54px;
-    left: 45px;
-  }
-  .lds-roller div:nth-child(3) {
-    animation-delay: -0.108s;
-  }
-  .lds-roller div:nth-child(3):after {
-    top: 57px;
-    left: 39px;
-  }
-  .lds-roller div:nth-child(4) {
-    animation-delay: -0.144s;
-  }
-  .lds-roller div:nth-child(4):after {
-    top: 58px;
-    left: 32px;
-  }
-  .lds-roller div:nth-child(5) {
-    animation-delay: -0.18s;
-  }
-  .lds-roller div:nth-child(5):after {
-    top: 57px;
-    left: 25px;
-  }
-  .lds-roller div:nth-child(6) {
-    animation-delay: -0.216s;
-  }
-  .lds-roller div:nth-child(6):after {
-    top: 54px;
-    left: 19px;
-  }
-  .lds-roller div:nth-child(7) {
-    animation-delay: -0.252s;
-  }
-  .lds-roller div:nth-child(7):after {
-    top: 50px;
-    left: 14px;
-  }
-  .lds-roller div:nth-child(8) {
-    animation-delay: -0.288s;
-  }
-  .lds-roller div:nth-child(8):after {
-    top: 45px;
-    left: 10px;
-  }
-  @keyframes lds-roller {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
+}
