--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -6,9 +6,9 @@
     width: 400px;
     justify-content: space-between;
 
-    .export {
+    .switch-week {
       padding: 0px;
-      width: 90px;
+      width: 135px;
       display: flex;
       justify-content: space-between;
 
@@ -20,10 +20,22 @@
         align-items: center;
       }
     }
+  }
 
-    .switch-week {
+  .cotent-header {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+
+    .actions {
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .content-header-button {
       padding: 0px;
-      width: 135px;
+      width: 90px;
       display: flex;
       justify-content: space-between;
 
