--- a/src/app/components/view/view.component.html
+++ b/src/app/components/view/view.component.html
@@ -6,7 +6,10 @@
             <ng-content select="[viewActions]"></ng-content>
         </div>
     </div>
-    <div class="view-content">
+    <div class="view-content-header" #viewContentHeaderRef>
+        <ng-content select="[viewContentHeader]"></ng-content>
+    </div>
+    <div class="view-content" [ngClass]="{'has-content-header' : viewContentHeaderRef.childNodes.length > 0}">
         <ng-content select="[viewContent]"></ng-content>
     </div>
 </div>
