--- a/src/app/components/view/view.component.scss
+++ b/src/app/components/view/view.component.scss
@@ -34,8 +34,19 @@
         }
     }
 
+    .view-content-header {
+        flex: 1;
+        width: 1200px;
+        top: 140px;
+        height: 50px;
+        position: absolute;
+        background-color: $theme-primary;
+        box-shadow: 0px 0px 3px black;
+        border-radius: 3px;
+        padding: 3px 13px;
+    }
+
     .view-content {
-        margin: 0 auto 0 auto;
         width: 1200px;
         flex: 1;
         height: 100%;
@@ -46,6 +57,10 @@
         box-shadow: 0px 0px 3px black;
         border-radius: 3px;
         padding: 10px;
+
+        &.has-content-header {
+            top: 200px;
+        }
 
         >div {
             height: 100%;
