content-header and icons and actions

--- a/src/app/components/conditions/conditions.component.html
+++ b/src/app/components/conditions/conditions.component.html
@@ -67,7 +67,7 @@
                           </div>
                           <div class="small-cell action-cell">
                               <button mat-button (click)="onDeleteCondition(condition)">
-                                  <fa name="trash"></fa>
+                                  <fa-icon icon="trash"></fa-icon>
                               </button>
 
                           </div>
