--- a/src/app/components/profiles/profiles.component.html
+++ b/src/app/components/profiles/profiles.component.html
@@ -28,7 +28,7 @@
             </div>
             <div class="small-cell action-cell">
               <button mat-button (click)="onEditProfile(profile)">
-                <fa name="pencil"></fa>
+                <fa-icon icon="edit"></fa-icon>
               </button>
             </div>
           </div>
