--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     <div class="sidebar-footer">
         <div (click)="onLogoutClicked()" class="logout-item">
             <span>Logout</span>
-            <fa name="sign-out"></fa>
+            <fa-icon icon="sign-out"></fa-icon>
         </div>
     </div>
 </div>
