--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,16 +1,25 @@
 @import "../../../theme";
 
 .sh-home {
-  .actions {
+  .header-actions {
     display: flex;
     width: 400px;
     justify-content: space-between;
 
-    .switch-week {
+    button {
       padding: 0px;
       width: 135px;
       display: flex;
       justify-content: space-between;
+
+      &.this-week {
+        width: 90px;
+
+        ::ng-deep .mat-button-wrapper {
+          padding: 0px;
+          justify-content: center;
+        }
+      }
 
       ::ng-deep .mat-button-wrapper {
         width: 100%;
@@ -28,23 +37,13 @@
     align-items: center;
     justify-content: space-between;
 
-    .actions {
+    .content-header-actions {
       display: flex;
       justify-content: flex-end;
-    }
-
-    .content-header-button {
-      padding: 0px;
-      width: 90px;
-      display: flex;
-      justify-content: space-between;
 
       ::ng-deep .mat-button-wrapper {
-        width: 100%;
-        justify-content: space-between;
-        display: flex;
-        padding: 0px 15px;
-        align-items: center;
+        font-size: 20px;
+        color: $theme-secondary;
       }
     }
   }
@@ -54,7 +53,7 @@
     flex-direction: column;
 
     .schedule-content {
-      height: calc(100% - 230px);
+      //height: calc(100% - 290px);
     }
 
     .row {
