--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,3 +67,17 @@ body {
     overflow: visible!important;
 }
 
+@keyframes blinking {
+    0% {
+        background-color: transparent;
+    }
+
+    50% {
+        background-color: lightgray;
+    }
+
+    100% {
+        background-color: transparent;
+    }
+}
+
