--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -69,6 +69,10 @@
 
       &.title-row {
         flex-basis: 75px;
+
+        .title {
+          padding-top: 10px;
+        }
       }
 
       .title {
@@ -82,6 +86,7 @@
       .cell {
         flex: 1;
         border-bottom: 2px solid lightgray;
+        text-align: center;
 
         &.today {
           background-color: lightgray;
